NMS-10295: initial implementation of minion status tracker/updater

--- a/features/minion/pom.xml
+++ b/features/minion/pom.xml
@@ -17,6 +17,7 @@
         <module>heartbeat</module>
         <module>repository</module>
         <module>shell</module>
+        <module>status</module>
     </modules>
 
     <build>
